Enabled preview gradle