@@ -4,12 +4,30 @@ apply plugin: 'application'
 
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
+compileJava {
+    options.compilerArgs += ["--enable-preview"]
+}
+
+tasks.withType(JavaCompile).all {
+    options.compilerArgs += ['--enable-preview']
+}
+
+tasks.withType(Test).all {
+    jvmArgs += '--enable-preview'
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
 javadoc {
     options.addBooleanOption('html5', true)
 }
 
 tasks.withType(Javadoc) {
     options.addStringOption('Xdoclint:none', '-quiet')
+    options.addBooleanOption('-enable-preview', true)
+    options.addStringOption('-release', '19')
 }
 
 task javadocsJar(type: Jar, dependsOn: javadoc, description: 'Creates a jar from the javadocs files.') {
@@ -22,27 +40,20 @@ task sourcesJar(type: Jar, dependsOn: classes, description: 'Creates a jar from 
     archiveClassifier.set('sources')
 }
 
-task FunctionsJar(dependsOn: classes, type: Jar,
-        description: 'Creates a jar from the org.ignis.executor.api.functions classes.') {
-    archiveClassifier.set('testFunctions')
-    from sourceSets.main.output
-    include 'org/ignis/executor/api/functions/**'
-}
-
 artifacts {
     archives jar
     archives sourcesJar
     archives javadocsJar
-    archives FunctionsJar
 }
 
+archivesBaseName = 'ignis-core-java'
+version = '1.0'
 publishing {
     publications {
         maven(MavenPublication) {
             groupId = 'org.ignis'
-            artifactId = 'core'
-            version = '1.0'
-
+            artifactId = archivesBaseName
+            version = version
             from components.java
         }
     }
@@ -50,37 +61,30 @@ publishing {
 
 repositories {
     mavenCentral()
-    flatDir {
-        dirs 'lib/mpj-v0_44/lib'
-    }
 }
 
 dependencies {
-    implementation group: 'org.apache.thrift', name: 'libthrift', version: '0.13.0'
+    implementation group: 'org.apache.thrift', name: 'libthrift', version: '0.15.0'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.0'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.14.0'
     implementation group: 'org.json', name: 'json', version: '20210307'
     implementation group: 'org.openjdk.jol', name: 'jol-core', version: '0.10'
-    implementation name: 'mpj'
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
 
-
 test {
     useJUnitPlatform()
 }
 
-task copyToLib(type: Copy, description: 'Copy project dependencies.') {
-    from project.configurations.compileClasspath
+task jarAndLibs(type: Copy, description: 'Copy project dependencies.') {
+    dependsOn "jar"
+    delete("$buildDir/libs")
+    from project.configurations.runtimeClasspath
     into "$buildDir/libs"
 }
-build.dependsOn(copyToLib)
-
-task jarAndLibs {
-    dependsOn 'jar'
-    dependsOn 'copyToLib'
-}
+sourceCompatibility = JavaVersion.VERSION_19
+targetCompatibility = JavaVersion.VERSION_19
